--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
+    <title>Grupo C - Avanzada</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
